--- a/src/main/resources/templates/breedlist.html
+++ b/src/main/resources/templates/breedlist.html
@@ -1,12 +1,27 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <title>Dog registry - Koirarekisteri</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $.getJSON("breed/4", function(result){
+      $.each(result, function(i, field){
+        $("#div1").append(field + " ");
+      });
+    });
+  });
+});
+</script>
+
 </head>
 <body>
+<div id="div1"></div>
+<button>Paina</button>
 	<div class="container">
 		<h1>Koirarekisteri</h1>
 		<br>
@@ -22,11 +37,12 @@
 			<tr th:each="breed : ${breeds}">
 				<td th:text="${breed.name}">rotu</td>
 				<td th:text="${breed.FCIBreedGroup.name}">FCI roturyhmä</td>
-				<td><a th:href="@{/updateBreed/{id}(id=${breed.breedId})}">Muokkaa tietoja</a></td>
+				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/updateBreed/{id}(id=${breed.breedId})}">Muokkaa tietoja</a></td>
 			</tr>
 		</tbody>
 		</table>
-		<a href="/newbreed" class="btn btn-info" role="button">Lisää uusi rotu</a>
+		<a sec:authorize="hasAuthority('ADMIN')" href="/newbreed" class="btn btn-info" role="button">Lisää uusi rotu</a>
+		<a href="/index" class="btn btn-info" role="button">Palaa etusivulle</a>
 	</div>
 </body>
 </html>
