--- a/src/main/resources/templates/doglist.html
+++ b/src/main/resources/templates/doglist.html
@@ -1,15 +1,24 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 	<title>Dog registry - Koirarekisteri</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script>
+		$(document).ready(function(){
+		  $("#poista").click(function(){
+		    $("#teksti").load("poistoteksti.txt");
+		  });
+		});
+	</script>
+
 </head>
 <body>
 	<div class="container">
 		<h1>Koirarekisteri</h1>
 		<br>
+		<div id="teksti"></div>
 		<table class="table table-hover">
 	    <thead>
 	     	<tr>
@@ -26,11 +35,12 @@
 				<td th:text="${dog.owner}">Omistaja</td>
 				<td th:text="${dog.breed.name}">Rotu</td>
 				<td><a th:href="@{/update/{id}(id=${dog.dogId})}">Muokkaa tietoja</a></td>
-				<td><a th:href="@{/delete/{id}(id=${dog.dogId})}">Poista</a></td> 
+				<td sec:authorize="hasAuthority('ADMIN')"><a id="poista" th:href="@{/delete/{id}(id=${dog.dogId})}">Poista</a></td> 
 			</tr>
 		</tbody>
 		</table>
-		<a href="/newdog" class="btn btn-info" role="button">Lisää uusi koira</a>
+		<a href="/newdog" class="btn btn-info" role="button">Lisää uusi koira</a> 
+		<a href="/index" class="btn btn-info" role="button">Palaa etusivulle</a>
 	</div>
 </body>
 </html>
