--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="container">
+		<h1>Koirarekisteri</h1>
         <div th:if="${param.error}">
             Virheellinen käyttäjätunnus tai salasana.
         </div>
@@ -16,9 +17,9 @@
             Olet kirjautunut ulos onnistuneesti.
         </div>
         <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+            <div><label> Käyttäjätunnus : <input type="text" name="username"/> </label></div>
+            <div><label> Salasana: <input type="password" name="password"/> </label></div>
+            <div><input type="submit" value="Kirjaudu sisään"/></div>
         </form>
 	</div>
 </body>
