--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,8 +19,10 @@
         <form th:action="@{/login}" method="post">
             <div><label> Käyttäjätunnus : <input type="text" name="username"/> </label></div>
             <div><label> Salasana: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Kirjaudu sisään"/></div>
+            <div><input class="btn btn-success" type="submit" value="Kirjaudu sisään"/></div>
         </form>
+        <br>
+        <a href="/index" class="btn btn-info" role="button">Selaa ilman sisäänkirjautumista</a>
 	</div>
 </body>
 </html>
